
subprojects {
    apply plugin: 'java'
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

project(':authx-micro-clients') {
}

project(':authx-micro-examples') {
}

project(':authx-micro-service') {
}
